ast/src/snapshots/transmute_ast__parser__tests__err_array_instantiation_missing_closing_bracket_after_comma.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"[0,;\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `;`, expected one of (10) identifier, number, `true`, `false`, `if`, `while`, `(`, `-`, `]`, `[`",
                span: 1:4; [3, 4],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    1596,
                ),
            },
        ],
    },
)
