ast/src/snapshots/transmute_ast__parser__tests__err_array_type_missing_after_base.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"struct S { field: [number }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `}`, expected one of (1) `;`",
                span: 1:27; [26, 27],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    588,
                ),
            },
        ],
    },
)
