ast/src/snapshots/transmute_ast__parser__tests__err_array_type_missing_after_open_bracket.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"struct S { field: [\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `eof`, expected one of (2) identifier, `[`",
                span: 1:20; [19, 19],
                level: Error,
            },
        ],
    },
)
