ast/src/snapshots/transmute_ast__parser__tests__err_define_annotation_missing_semi.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"annotation a\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `eof`, expected one of (1) `;`",
                span: 1:13; [12, 12],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    1935,
                ),
            },
        ],
    },
)
