ast/src/snapshots/transmute_ast__parser__tests__err_define_annotation_with_at.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `@`, expected one of (1) identifier",
                span: 1:12; [11, 12],
                level: Error,
            },
        ],
        inputs: (),
    },
)
