ast/src/snapshots/transmute_ast__parser__tests__err_define_namespace_no_close_curlybracket.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected `}` to close `{` at 1:14, got `eof`",
                span: 1:15; [14, 14],
                level: Error,
            },
        ],
        inputs: (),
    },
)
