ast/src/snapshots/transmute_ast__parser__tests__err_define_namespace_no_semi_no_open_curlybracket.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected identifier(invalid), expected one of (2) `;`, `{`",
                span: 1:14; [13, 20],
                level: Error,
            },
        ],
        inputs: (),
    },
)
