ast/src/snapshots/transmute_ast__parser__tests__err_expression_missing_token_at_eof.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"1 + \")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `eof`, expected one of (10) identifier, number, string, `true`, `false`, `if`, `while`, `(`, `-`, `[`",
                span: 1:5; [4, 4],
                level: Error,
            },
        ],
    },
)
