ast/src/snapshots/transmute_ast__parser__tests__err_if_missing_condition.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"if { }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `{`, expected one of (10) identifier, number, string, `true`, `false`, `if`, `while`, `(`, `-`, `[`",
                span: 1:4; [3, 4],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    1002,
                ),
            },
        ],
    },
)
