ast/src/snapshots/transmute_ast__parser__tests__err_illegal_char_in_place_of_potential_operator.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"41 $\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `$`, expected one of (14) `;`, `.`, `=`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`, `[`",
                span: 1:4; [3, 4],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    1935,
                ),
            },
        ],
    },
)
